--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -40,7 +40,7 @@
   display: flex;
   justify-content: center;
 }
-.stats-data {
+.stats__data {
   display: flex;
   flex-direction: column;
   align-items: center;
